# toki-bridge-lcp-enclaves

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  buildcommon.mk  buildenv.mk  mrenclaves.yaml  pull_request_template.md
.github/: dependabot.yml
.github/workflows/: release.yml  sgxsdk.yml  test.yml
docs/: build.md  mrenclave.md
enclaves/ethereum/: Makefile
enclaves/ethereum/enclave/: Cargo.toml  Enclave.config.xml
enclaves/ethereum/enclave/src/: lib.rs
enclaves/ethereum/mrenclaves/mainnet/: MRENCLAVE
enclaves/ethereum/mrenclaves/testnet/: MRENCLAVE
enclaves/optimism/: Makefile
enclaves/optimism/enclave/: Cargo.toml  Enclave.config.xml  Enclave_t.c
enclaves/optimism/enclave/src/: lib.rs
enclaves/optimism/mrenclaves/mainnet/: MRENCLAVE
enclaves/optimism/mrenclaves/testnet/: MRENCLAVE
enclaves/parlia/: Makefile
enclaves/parlia/enclave/: Cargo.toml  Enclave.config.xml
enclaves/parlia/enclave/src/: lib.rs
enclaves/parlia/mrenclaves/mainnet/: MRENCLAVE
enclaves/parlia/mrenclaves/testnet/: MRENCLAVE
scripts/: install_build_dependencies.sh  install_rust.sh  mrenclave.sh
sgxsdk/: Dockerfile
sgxsdk/scripts/: install_sgx_sdk.sh
