[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "proxy_enclave"
crate-type = ["staticlib"]

[features]
default = [
    "localnet"
]
localnet = []
testnet = []
mainnet = []

[dependencies]
enclave-runtime = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.17", features = ["panic-logging"] }
optimism-elc = { git = "https://github.com/datachainlab/optimism-elc", rev="v0.1.6", default-features = false }

[patch."https://github.com/datachainlab/lcp"]
light-client = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }
lcp-types = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }
commitments = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }
crypto = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }
lcp-proto = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }
store = { git = "https://github.com/datachainlab/lcp?", rev = "v0.2.17" }

[patch."crates-io"]
getrandom-028 = { git = "https://github.com/datachainlab/getrandom-sgx-lite", package = "getrandom" }
getrandom-032 = { git = "https://github.com/yoshidan/getrandom-sgx-lite", branch="v0.3.2_sgx",  package = "getrandom" }
# TODO these patches would be better as optional
sha2-0109 = { git = "https://github.com/yoshidan/hashes", branch = "0.10.9-sha256-hwa-disabled", package = "sha2" }
sha2-0108 = { git = "https://github.com/bluele/hashes", branch = "0.10.8-sha256-hwa-disabled", package = "sha2" }
sha2-099 = { git = "https://github.com/bluele/hashes", branch = "0.9.9-sha256-hwa-disabled", package = "sha2" }
ibc = { git = "https://github.com/datachainlab/ibc-rs", rev = "v0.29.0-channel-upgrade-path" }
time = { git = "https://github.com/yoshidan/time", rev = "v0.3.19-p2", package = "time" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
